[gd_scene load_steps=15 format=2]

[ext_resource path="res://TitleScene.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/main screen 2.png" type="Texture" id=2]
[ext_resource path="res://menu/visual/titlemenu.png" type="Texture" id=3]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00000.png" type="Texture" id=4]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00001.png" type="Texture" id=5]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00002.png" type="Texture" id=6]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00003.png" type="Texture" id=7]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00004.png" type="Texture" id=8]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00005.png" type="Texture" id=9]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00006.png" type="Texture" id=10]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00007.png" type="Texture" id=11]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00008.png" type="Texture" id=12]
[ext_resource path="res://menu/visual/star/Y3ir(1).gif_frame_00009.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="TitleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 580.324, 366.738 )
texture = ExtResource( 2 )

[node name="titlemenu" type="Sprite" parent="background"]
position = Vector2( -6.20209, 109.01 )
texture = ExtResource( 3 )

[node name="newButton" type="Button" parent="background/titlemenu"]
margin_left = -92.8298
margin_top = -119.333
margin_right = 96.1702
margin_bottom = -75.3327
flat = true

[node name="loadButton" type="Button" parent="background/titlemenu"]
margin_left = -101.503
margin_top = -58.327
margin_right = 108.497
margin_bottom = -3.327
flat = true

[node name="settingsButton" type="Button" parent="background/titlemenu"]
margin_left = -102.669
margin_top = 5.82224
margin_right = 107.331
margin_bottom = 60.8222
flat = true

[node name="exit" type="Button" parent="background/titlemenu"]
margin_left = -103.836
margin_top = 68.8052
margin_right = 106.164
margin_bottom = 123.805
flat = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="background"]
position = Vector2( 333.404, -298.121 )
frames = SubResource( 1 )
frame = 6
playing = true
